    (patch from Kai Sassmannshausen)
  * login: optionally limit the number of account creations per IP (patch
    from Patrick Reinhardt)
  * disable some of the string.Intern() calls because they were poisoning
    the intern tables
  * synchronize NetState.FinishDispose()
  * implemented feature "manual-gc" for manual garbage collection
  * added legacy scripts
    - use log4net for logging
    - removed Address from ServerList
    - default to server list from Config.GameServerListConfig
    - get server name from Config.ServerName
    - make backup path portable
    - display "SunUO" in UOGInfo packet
    - use Config.ConfigDirectory, Config.BackupDirectory
    - don't read data-path from stdin
    - removed DataPath.CustomPath
    - don't try to dns-resolve hostname, just use LocalEndPoint
    - test center switch is feature "test-center"
    - launch www.sunuo.org instead of www.runuo.com
    - disambiguate Math.Floor() call
    - fixed compiler warnings
    - Multis.MovingCrate: check ReadItem() result
    - initialize BaseCreature.m_arSpellAttack and m_arSpellDefense on demand
    - don't allocate an empty array for empty book pages
    - create on demand:
      - PlayerMobile.m_VisList
      - PlayerMobile.m_PermaFlags
      - PlayerMobile.m_JusticeProtectors
      - PlayerMobile.m_AntiMacroTable
      - PlayerMobile.m_Aggressors
      - PlayerMobile.m_Aggressed
      - BaseCreature.m_Owners
      - GenericBuyInfo.Name
      - GenericBuyInfo.DisplayCache.m_Table
      - GenericBuyInfo.DisplayCache.m_Mobiles
      - GenericSellInfo.m_Table
      - BaseWeapon: m_AosAttributes, m_AosWeaponAttributes
      - BaseArmor: m_AosAttributes, m_AosArmorAttributes, m_AosSkillBonuses
      - BaseClothing: m_AosAttributes, m_AosClothingAttributes,
        m_AosSkillBonuses, m_AosResistances
      - Guild.m_Allies, Guild.m_Enemies, Guild.m_WarDeclarations,
        Guild.m_WarInvitations, Guild.m_AllyDeclarations,